home_style.css
* {
  color: aliceblue;
  font-family: monospace;
}

@keyframes fadeOutAnimation {
  /* set this to opacity 0 with css once its over */
  80% {
    transform: translateY(0);
  }

  100% {
    opacity: 1;
    transform: translateY(100vh);
  }
}

#intro-screen {
  opacity: 1;
  position: fixed;
  height: 100vh;
  width: 100vw;
  background-color: #C8D9F0;
  z-index: 200;
  display: grid;
  place-content: center;
  /* animation: fadeOutAnimation 10s ease forwards; */
}

#intro-screen h1 {
  padding: 0;
  margin: 0;
  font-size: 5em;
  font-family: monospace;
  position: relative;
  grid-area: overlap;
  letter-spacing: 10px;
}

.intro-p {
  padding: 0;
  margin: 0;
  font-size: 5em;
  font-family: monospace;
  position: relative;
  grid-area: overlap;
  letter-spacing: 10px;
  z-index: 102;
  animation: removeblinking step-end forwards;
  animation-delay: 7s;
}

.intro-p2 {
  z-index: 101;
}

.intro-p::before, 
.intro-p::after,
.intro-p2::before,
.intro-p2::after,
.intro-p3::before,
.intro-p3::after {
  content: "";
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
}

.intro-p2::before {
  background: #C8D9F0;
  animation: blinking2 1s step-end infinite, typewriter2 4s steps(23) forwards, removeblinking forwards;
  animation-delay: 7s, 7s, 12s;
  border-left: 1rem transparent white;
}

.intro-p::before {
  background: #C8D9F0;
  animation: blinking 1s step-end infinite, typewriter 1s steps(3) forwards, typewriter2 1.5s steps(20) forwards, typewriter3 1.5s steps(23) forwards, removeblinking forwards;
  animation-delay: 0s, 0s, 1.5s, 3.7s, 7s;
  border-left: 1rem solid white;
}


@keyframes typewriter {
  50% {
    transform: translateX(13%);
  }
  100% {
    transform: translateX(13%);
  }
}

@keyframes typewriter2 {
  100% {
    transform: translateX(100%);
  }
}

@keyframes typewriter3 {
  100% {
    transform: translateX(0%);
  }
}

@keyframes blinking {
  50% {
    border-left-color: transparent;
  }
}

@keyframes blinking2 {
  50% {
    border-left: 1rem solid white;
  }
}

@keyframes removeblinking {
  100% {
    border-left-color: transparent;
    opacity: 0;
  }
}

.intro-p3 {
  z-index: 100;
  position: absolute;
  top: 1.5em;
}

.intro-p3::before {
  background: teal;
  animation: blinking2 1s step-end infinite, typewriter2 2s steps(15) forwards;
  animation-delay: 12s , 13s;
  border-left: 1rem transparent white;
}

body {
  background-color: #C8D9F0;
  margin: 0;
  /* background-image: radial-gradient(black 1px, transparent 0);
  background-size: 40px 40px;
  background-position: -19px -19px; */
}

.nav_logo {
  font-size: 20px;
  text-decoration: none;
  margin-left: 18vh;
  font-weight: bold;
  color: #fff6f6;
}

.logo-span {
  /* color: rgb(255, 252, 205); */
  color: #fff6f6;
}

.nav_bar {
  display: flex;
  overflow: hidden;
  margin: 0;
  padding-right: 10%;
  padding-left: 2%;
  padding-top: 10px;
  justify-content: space-between;
  align-items: center;
  top: 0;
  left: 0;
}

nav p {
  float: left;
}

nav ul {
  list-style: none;
  padding: 0;
  margin: 0;
  float: right;
}

nav li{
  display: inline-block;
  overflow: hidden;
}

nav a {
  color: white;
  text-decoration: none;
  font-size: 20px;
  padding: 15px;
  margin: 0;
  display: block;
  width: 100%;
  min-width: 10vh;
  text-align: center;
}

nav a:hover{
  transition: transform 0.3s ease;
  font-weight: bold;
  color: #fffff1;
  transform: translateY(5px);
}

.first-section {
  display: flex;
  margin: 0px;
  height: 80vh;
  overflow: hidden;
  background-color: #e8fdff;
  width: 100vw;
  justify-content: space-between;
  background: linear-gradient(to left, rgb(249, 250, 240), transparent 90%);
}

.first-section p {
  margin: 0px;
}

.myImage {
  max-width: max-content;
}

.myImage img{
  float:right;
  height: 80vh;
  padding-right: 50px;
}

#my-name {
  font-size: 50px;
  color: 	#feffdd;
  justify-content: left;
  font-size: 50px;
  font-weight: bold;
  margin: 0px;
}

@keyframes bobbingAnim {
  0% {
      transform: translate(0px, -5px);
      animation-timing-function:ease-in-out
  }

  50% {
      transform: translate(0px, 0px);
      animation-timing-function:ease-in-out
  }

  100% {
      transform: translate(0px, -5px);
      animation-timing-function:ease-in-out
  }
}

.about-me:first-child {
  font-size: 30px;
}

.about-me {
  font-size: 27px;
  color: 	#7c9ccc;
  font-weight: bold;
}

.first-section div:first-child{
  display: inline;
  flex-grow: 1;
  margin: auto;
}

#about-me-div {
  align-content: center;
  margin: 20vh
}

.socials {
  display: flex;
  height: 30px;
  margin-top: 10px;
  overflow: hidden;
  gap: 10px;
}

.socials-logo {
  width:100%;
  height:100%;
  object-fit:cover;
}

#second-section {
  margin-top: 50px;
}

